
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sem {void* semzcnt; void* semncnt; void* sempid; void* semval; } ;


 int GETNCNT ;
 int GETPID ;
 int GETVAL ;
 int GETZCNT ;
 scalar_t__ errno ;
 int idx ;
 int memset (struct sem*,int ,int) ;
 int perror (char*) ;
 void* semctl (int ,int ,int ,int *) ;
 int semid ;

int read_sem(struct sem *s){
 memset(s, 0, sizeof(struct sem));

 s->semval = semctl(semid, idx, GETVAL, ((void*)0));
 if(errno != 0)
  goto err;

 s->sempid = semctl(semid, idx, GETPID, ((void*)0));
 if(errno != 0)
  goto err;

 s->semncnt = semctl(semid, idx, GETNCNT, ((void*)0));
 if(errno != 0)
  goto err;

 s->semzcnt = semctl(semid, idx, GETZCNT, ((void*)0));
 if(errno != 0)
  goto err;

 return 0;

err:
 perror("read_sem: semctl");
 return -1;
}
